--- a/VRA_LosAngeles.html
+++ b/VRA_LosAngeles.html
@@ -1566,6 +1566,12 @@ div.tocify {
 <div id="step-3-given-the-current-cvap-how-many-minority-opportunity-districts-can-be-created" class="section level2">
 <h2>Step 3: Given the current CVAP, how many minority opportunity districts can be created?</h2>
 <p>Testing district boundaries in Maptitude…</p>
+<div id="what-is-the-ideal-total-population-per-district" class="section level4">
+<h4>What is the ideal total population per district?</h4>
+<p>According to the HaystaqDNA projections, the 2020 LA County population is 10,138,940.</p>
+<p>Dividing the LA County total population by 5 Supervisorial Districts, the ideal district population is 2,027,788.</p>
+<p>```</p>
+</div>
 </div>
 <div id="sources" class="section level2">
 <h2>Sources:</h2>
