--- a/VRA_LosAngeles.html
+++ b/VRA_LosAngeles.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="LD" />
+<meta name="author" content="DRAFT–Internal Use Only" />
 
 
 <title>VRA Section 2 Analysis-Los Angeles</title>
@@ -1291,6 +1291,230 @@ document.addEventListener('DOMContentLoaded', function() {
   }
 });
 </script>
+<script>$(document).ready(function(){
+    if (typeof $('[data-toggle="tooltip"]').tooltip === 'function') {
+        $('[data-toggle="tooltip"]').tooltip();
+    }
+    if ($('[data-toggle="popover"]').popover === 'function') {
+        $('[data-toggle="popover"]').popover();
+    }
+});
+</script>
+<style type="text/css">
+.lightable-minimal {
+border-collapse: separate;
+border-spacing: 16px 1px;
+width: 100%;
+margin-bottom: 10px;
+}
+.lightable-minimal td {
+margin-left: 5px;
+margin-right: 5px;
+}
+.lightable-minimal th {
+margin-left: 5px;
+margin-right: 5px;
+}
+.lightable-minimal thead tr:last-child th {
+border-bottom: 2px solid #00000050;
+empty-cells: hide;
+}
+.lightable-minimal tbody tr:first-child td {
+padding-top: 0.5em;
+}
+.lightable-minimal.lightable-hover tbody tr:hover {
+background-color: #f5f5f5;
+}
+.lightable-minimal.lightable-striped tbody tr:nth-child(even) {
+background-color: #f5f5f5;
+}
+.lightable-classic {
+border-top: 0.16em solid #111111;
+border-bottom: 0.16em solid #111111;
+width: 100%;
+margin-bottom: 10px;
+margin: 10px 5px;
+}
+.lightable-classic tfoot tr td {
+border: 0;
+}
+.lightable-classic tfoot tr:first-child td {
+border-top: 0.14em solid #111111;
+}
+.lightable-classic caption {
+color: #222222;
+}
+.lightable-classic td {
+padding-left: 5px;
+padding-right: 5px;
+color: #222222;
+}
+.lightable-classic th {
+padding-left: 5px;
+padding-right: 5px;
+font-weight: normal;
+color: #222222;
+}
+.lightable-classic thead tr:last-child th {
+border-bottom: 0.10em solid #111111;
+}
+.lightable-classic.lightable-hover tbody tr:hover {
+background-color: #F9EEC1;
+}
+.lightable-classic.lightable-striped tbody tr:nth-child(even) {
+background-color: #f5f5f5;
+}
+.lightable-classic-2 {
+border-top: 3px double #111111;
+border-bottom: 3px double #111111;
+width: 100%;
+margin-bottom: 10px;
+}
+.lightable-classic-2 tfoot tr td {
+border: 0;
+}
+.lightable-classic-2 tfoot tr:first-child td {
+border-top: 3px double #111111;
+}
+.lightable-classic-2 caption {
+color: #222222;
+}
+.lightable-classic-2 td {
+padding-left: 5px;
+padding-right: 5px;
+color: #222222;
+}
+.lightable-classic-2 th {
+padding-left: 5px;
+padding-right: 5px;
+font-weight: normal;
+color: #222222;
+}
+.lightable-classic-2 tbody tr:last-child td {
+border-bottom: 3px double #111111;
+}
+.lightable-classic-2 thead tr:last-child th {
+border-bottom: 1px solid #111111;
+}
+.lightable-classic-2.lightable-hover tbody tr:hover {
+background-color: #F9EEC1;
+}
+.lightable-classic-2.lightable-striped tbody tr:nth-child(even) {
+background-color: #f5f5f5;
+}
+.lightable-material {
+min-width: 100%;
+white-space: nowrap;
+table-layout: fixed;
+font-family: Roboto, sans-serif;
+border: 1px solid #EEE;
+border-collapse: collapse;
+margin-bottom: 10px;
+}
+.lightable-material tfoot tr td {
+border: 0;
+}
+.lightable-material tfoot tr:first-child td {
+border-top: 1px solid #EEE;
+}
+.lightable-material th {
+height: 56px;
+padding-left: 16px;
+padding-right: 16px;
+}
+.lightable-material td {
+height: 52px;
+padding-left: 16px;
+padding-right: 16px;
+border-top: 1px solid #eeeeee;
+}
+.lightable-material.lightable-hover tbody tr:hover {
+background-color: #f5f5f5;
+}
+.lightable-material.lightable-striped tbody tr:nth-child(even) {
+background-color: #f5f5f5;
+}
+.lightable-material.lightable-striped tbody td {
+border: 0;
+}
+.lightable-material.lightable-striped thead tr:last-child th {
+border-bottom: 1px solid #ddd;
+}
+.lightable-material-dark {
+min-width: 100%;
+white-space: nowrap;
+table-layout: fixed;
+font-family: Roboto, sans-serif;
+border: 1px solid #FFFFFF12;
+border-collapse: collapse;
+margin-bottom: 10px;
+background-color: #363640;
+}
+.lightable-material-dark tfoot tr td {
+border: 0;
+}
+.lightable-material-dark tfoot tr:first-child td {
+border-top: 1px solid #FFFFFF12;
+}
+.lightable-material-dark th {
+height: 56px;
+padding-left: 16px;
+padding-right: 16px;
+color: #FFFFFF60;
+}
+.lightable-material-dark td {
+height: 52px;
+padding-left: 16px;
+padding-right: 16px;
+color: #FFFFFF;
+border-top: 1px solid #FFFFFF12;
+}
+.lightable-material-dark.lightable-hover tbody tr:hover {
+background-color: #FFFFFF12;
+}
+.lightable-material-dark.lightable-striped tbody tr:nth-child(even) {
+background-color: #FFFFFF12;
+}
+.lightable-material-dark.lightable-striped tbody td {
+border: 0;
+}
+.lightable-material-dark.lightable-striped thead tr:last-child th {
+border-bottom: 1px solid #FFFFFF12;
+}
+.lightable-paper {
+width: 100%;
+margin-bottom: 10px;
+color: #444;
+}
+.lightable-paper tfoot tr td {
+border: 0;
+}
+.lightable-paper tfoot tr:first-child td {
+border-top: 1px solid #00000020;
+}
+.lightable-paper thead tr:last-child th {
+color: #666;
+vertical-align: bottom;
+border-bottom: 1px solid #00000020;
+line-height: 1.15em;
+padding: 10px 5px;
+}
+.lightable-paper td {
+vertical-align: middle;
+border-bottom: 1px solid #00000010;
+line-height: 1.15em;
+padding: 7px 5px;
+}
+.lightable-paper.lightable-hover tbody tr:hover {
+background-color: #F9EEC1;
+}
+.lightable-paper.lightable-striped tbody tr:nth-child(even) {
+background-color: #00000008;
+}
+.lightable-paper.lightable-striped tbody td {
+border: 0;
+}
+</style>
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -1514,13 +1738,14 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">VRA Section 2 Analysis-Los Angeles</h1>
-<h4 class="author">LD</h4>
+<h4 class="author">DRAFT–Internal Use Only</h4>
 <h4 class="date">5/28/2021</h4>
 
 </div>
 
 
-<p>Initial Analysis of VRA Section 2 compliance is to check the race/ethnicity of the current county sup district to get a baseline of minority VAP/CVAP from 2010. If the minority population hasn’t decreased, then we need to at least keep the same number of minority opportunity districts as last time. So the second step will be to see how population has changed by race/ethnicity from 2010.</p>
+<p>Initial Analysis of VRA Section 2 assessment is to check the race/ethnicity of the current county sup district to get a baseline of minority VAP/CVAP from 2010. If the minority population hasn’t decreased, then we need to at least keep the same number of minority opportunity districts as last time.</p>
+<p>Steps</p>
 <ol style="list-style-type: decimal">
 <li>Get race/eth summary by sup district from 2010.<br />
 </li>
@@ -1565,16 +1790,580 @@ div.tocify {
 </div>
 <div id="step-3-given-the-current-cvap-how-many-minority-opportunity-districts-can-be-created" class="section level2">
 <h2>Step 3: Given the current CVAP, how many minority opportunity districts can be created?</h2>
-<p>Testing district boundaries in Maptitude…</p>
 <div id="what-is-the-ideal-total-population-per-district" class="section level4">
 <h4>What is the ideal total population per district?</h4>
-<p>According to the HaystaqDNA projections, the 2020 LA County population is 10,138,940.</p>
-<p>Dividing the LA County total population by 5 Supervisorial Districts, the ideal district population is 2,027,788.</p>
-<p>```</p>
+<ul>
+<li><p>According to the HaystaqDNA projections, the 2020 LA County population is 10,138,940.</p></li>
+<li><p>Dividing the LA County total population by 5 Supervisorial Districts, the ideal district population is 2,027,788.</p></li>
+</ul>
+</div>
+<div id="cvap-summary-of-draft-district-plan" class="section level3">
+<h3>CVAP Summary of Draft District Plan</h3>
+<p>Supervisor District plan drafted in Maptitude. <a href="https://advancementproject.sharepoint.com/:b:/s/Portal/Eb8uLEkIyehGpnvNRXOB3EABTzGlOpDOdx2KcGCKimYxBg?e=sTCGkm">Draft plan</a> can be viewed here. Do NOT share externally.</p>
+<div id="district-1" class="section level4">
+<h4>District 1</h4>
+<p>AV/SC/North County</p>
+<table class=" lightable-material lightable-striped lightable-hover" style="font-family: &quot;Source Sans Pro&quot;, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+district
+</th>
+<th style="text-align:left;">
+raceeth
+</th>
+<th style="text-align:right;">
+CVAP_percent
+</th>
+<th style="text-align:right;">
+CVAP_moe
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+latino
+</td>
+<td style="text-align:right;">
+32.2%
+</td>
+<td style="text-align:right;">
+0.41%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+nh_aian
+</td>
+<td style="text-align:right;">
+0.8%
+</td>
+<td style="text-align:right;">
+0.02%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+nh_asian
+</td>
+<td style="text-align:right;">
+16.5%
+</td>
+<td style="text-align:right;">
+0.12%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+nh_black
+</td>
+<td style="text-align:right;">
+7.2%
+</td>
+<td style="text-align:right;">
+0.06%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+nh_nhpi
+</td>
+<td style="text-align:right;">
+0.2%
+</td>
+<td style="text-align:right;">
+0.03%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+nh_white
+</td>
+<td style="text-align:right;">
+42.7%
+</td>
+<td style="text-align:right;">
+0.32%
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li><p>Non-Latinx white has the largest CVAP share (42%), followed by Latinx people (32%). No group has majority.</p></li>
+<li><p>CVAP margin of error not meaningful.</p></li>
+</ul>
+</div>
+<div id="district-2" class="section level4">
+<h4>District 2</h4>
+<p>SELA/SGV</p>
+<table class=" lightable-material lightable-striped lightable-hover" style="font-family: &quot;Source Sans Pro&quot;, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+district
+</th>
+<th style="text-align:left;">
+raceeth
+</th>
+<th style="text-align:right;">
+CVAP_percent
+</th>
+<th style="text-align:right;">
+CVAP_moe
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+latino
+</td>
+<td style="text-align:right;">
+50.4%
+</td>
+<td style="text-align:right;">
+0.46%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+nh_aian
+</td>
+<td style="text-align:right;">
+0.6%
+</td>
+<td style="text-align:right;">
+0.02%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+nh_asian
+</td>
+<td style="text-align:right;">
+23.4%
+</td>
+<td style="text-align:right;">
+0.17%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+nh_black
+</td>
+<td style="text-align:right;">
+4.8%
+</td>
+<td style="text-align:right;">
+0.05%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+nh_nhpi
+</td>
+<td style="text-align:right;">
+0.3%
+</td>
+<td style="text-align:right;">
+0.06%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+nh_white
+</td>
+<td style="text-align:right;">
+20.3%
+</td>
+<td style="text-align:right;">
+0.27%
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li><p>Latinx CVAP share is just barely the majority at 50.4%.</p></li>
+<li><p>With a Latinx CVAP margin of error at 0.46%, it could potentially negate the Latinx majority.</p></li>
+</ul>
+</div>
+<div id="district-3" class="section level4">
+<h4>District 3</h4>
+<p>SFV/SELA</p>
+<table class=" lightable-material lightable-striped lightable-hover" style="font-family: &quot;Source Sans Pro&quot;, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+district
+</th>
+<th style="text-align:left;">
+raceeth
+</th>
+<th style="text-align:right;">
+CVAP_percent
+</th>
+<th style="text-align:right;">
+CVAP_moe
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+latino
+</td>
+<td style="text-align:right;">
+53.5%
+</td>
+<td style="text-align:right;">
+0.44%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+nh_aian
+</td>
+<td style="text-align:right;">
+0.6%
+</td>
+<td style="text-align:right;">
+0.02%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+nh_asian
+</td>
+<td style="text-align:right;">
+13.4%
+</td>
+<td style="text-align:right;">
+0.10%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+nh_black
+</td>
+<td style="text-align:right;">
+4.9%
+</td>
+<td style="text-align:right;">
+0.01%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+nh_nhpi
+</td>
+<td style="text-align:right;">
+0.1%
+</td>
+<td style="text-align:right;">
+0.03%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+nh_white
+</td>
+<td style="text-align:right;">
+27.2%
+</td>
+<td style="text-align:right;">
+0.31%
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li><p>Latinx CVAP share is the majority at 53.5%.</p></li>
+<li><p>With a Latinx CVAP margin of error at 0.44%, it is not likely to impact the Latinx majority.</p></li>
+</ul>
+</div>
+<div id="district-4" class="section level4">
+<h4>District 4</h4>
+<p>South LA/LB</p>
+<table class=" lightable-material lightable-striped lightable-hover" style="font-family: &quot;Source Sans Pro&quot;, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+district
+</th>
+<th style="text-align:left;">
+raceeth
+</th>
+<th style="text-align:right;">
+CVAP_percent
+</th>
+<th style="text-align:right;">
+CVAP_moe
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+latino
+</td>
+<td style="text-align:right;">
+44.6%
+</td>
+<td style="text-align:right;">
+0.46%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+nh_aian
+</td>
+<td style="text-align:right;">
+0.7%
+</td>
+<td style="text-align:right;">
+0.02%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+nh_asian
+</td>
+<td style="text-align:right;">
+9.4%
+</td>
+<td style="text-align:right;">
+0.08%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+nh_black
+</td>
+<td style="text-align:right;">
+32.3%
+</td>
+<td style="text-align:right;">
+0.27%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+nh_nhpi
+</td>
+<td style="text-align:right;">
+0.5%
+</td>
+<td style="text-align:right;">
+0.08%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+nh_white
+</td>
+<td style="text-align:right;">
+12.1%
+</td>
+<td style="text-align:right;">
+0.23%
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li><p>The Black CVAP share is at 32.3%, the district with the highest Black CVAP. The current Black CVAP in Supervisorial District 2 is 30%, so this is a slight increase in CVAP share.</p></li>
+<li><p>Latinx CVAP is the largest share of CVAP (44.6%), though not a majority.</p></li>
+<li><p>CVAP margin of error not meaningful.</p></li>
+</ul>
+</div>
+<div id="district-5" class="section level4">
+<h4>District 5</h4>
+<p>West LA/Coastal</p>
+<table class=" lightable-material lightable-striped lightable-hover" style="font-family: &quot;Source Sans Pro&quot;, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:right;">
+district
+</th>
+<th style="text-align:left;">
+raceeth
+</th>
+<th style="text-align:right;">
+CVAP_percent
+</th>
+<th style="text-align:right;">
+CVAP_moe
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+latino
+</td>
+<td style="text-align:right;">
+17.3%
+</td>
+<td style="text-align:right;">
+0.32%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+nh_aian
+</td>
+<td style="text-align:right;">
+0.6%
+</td>
+<td style="text-align:right;">
+0.02%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+nh_asian
+</td>
+<td style="text-align:right;">
+14.2%
+</td>
+<td style="text-align:right;">
+0.10%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+nh_black
+</td>
+<td style="text-align:right;">
+5.3%
+</td>
+<td style="text-align:right;">
+0.05%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+nh_nhpi
+</td>
+<td style="text-align:right;">
+0.2%
+</td>
+<td style="text-align:right;">
+0.04%
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+nh_white
+</td>
+<td style="text-align:right;">
+61.9%
+</td>
+<td style="text-align:right;">
+0.31%
+</td>
+</tr>
+</tbody>
+</table>
+<ul>
+<li>Non-Latinx white has a majority CVAP at 61.9%.</li>
+</ul>
 </div>
 </div>
-<div id="sources" class="section level2">
-<h2>Sources:</h2>
+</div>
+<div id="sourcesreferences" class="section level2">
+<h2>Sources/References:</h2>
 <ul>
 <li><p>(LA County Legal Considerations)[<a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiYmdHxyO3wAhXFl54KHRJoDi8QFjAAegQIBRAD&amp;url=http%3A%2F%2Ffile.lacounty.gov%2FSDSInter%2Fbos%2Fsupdocs%2F59570.pdf&amp;usg=AOvVaw103KyrNp2M6LKrGwQNCION" class="uri">https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiYmdHxyO3wAhXFl54KHRJoDi8QFjAAegQIBRAD&amp;url=http%3A%2F%2Ffile.lacounty.gov%2FSDSInter%2Fbos%2Fsupdocs%2F59570.pdf&amp;usg=AOvVaw103KyrNp2M6LKrGwQNCION</a>]</p></li>
 <li><p>(Public Mapping)[<a href="http://www.publicmapping.org/what-is-redistricting/redistricting-criteria-the-voting-rights-act" class="uri">http://www.publicmapping.org/what-is-redistricting/redistricting-criteria-the-voting-rights-act</a>]</p></li>
