--- a/Election-Outcome-Estimates-in-Proposed-Districts.html
+++ b/Election-Outcome-Estimates-in-Proposed-Districts.html
@@ -258,6 +258,9 @@ div.tocify {
 <h2>Summarize voter data by plan geometry</h2>
 <div id="sketch-6-summary" class="section level3">
 <h3>Sketch 6 Summary</h3>
+<ul>
+<li>2020 proposition outcomes (percent of voters who approve the proposition) with the share of the Latinx and Asian vote and the registered voter turnout (RVT) in the 2020 General Election.</li>
+</ul>
 <table class="table table-striped table-hover table-condensed" style="margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -275,9 +278,6 @@ prc_p17
 </th>
 <th style="text-align:right;">
 prc_p21
-</th>
-<th style="text-align:right;">
-prc_p22
 </th>
 <th style="text-align:right;">
 prc_latvote
@@ -311,9 +311,6 @@ asn_rvt
 50.45%
 </td>
 <td style="text-align:right;">
-51.60%
-</td>
-<td style="text-align:right;">
 49.04%
 </td>
 <td style="text-align:right;">
@@ -341,9 +338,6 @@ asn_rvt
 </td>
 <td style="text-align:right;">
 48.36%
-</td>
-<td style="text-align:right;">
-49.48%
 </td>
 <td style="text-align:right;">
 18.27%
@@ -375,9 +369,6 @@ asn_rvt
 52.37%
 </td>
 <td style="text-align:right;">
-52.19%
-</td>
-<td style="text-align:right;">
 46.02%
 </td>
 <td style="text-align:right;">
@@ -405,9 +396,6 @@ V09
 </td>
 <td style="text-align:right;">
 39.65%
-</td>
-<td style="text-align:right;">
-53.04%
 </td>
 <td style="text-align:right;">
 29.02%
@@ -439,9 +427,6 @@ V10
 42.57%
 </td>
 <td style="text-align:right;">
-55.07%
-</td>
-<td style="text-align:right;">
 59.08%
 </td>
 <td style="text-align:right;">
@@ -469,9 +454,6 @@ V11
 </td>
 <td style="text-align:right;">
 38.45%
-</td>
-<td style="text-align:right;">
-56.23%
 </td>
 <td style="text-align:right;">
 51.89%
@@ -503,9 +485,6 @@ V12
 63.02%
 </td>
 <td style="text-align:right;">
-44.58%
-</td>
-<td style="text-align:right;">
 47.18%
 </td>
 <td style="text-align:right;">
@@ -533,9 +512,6 @@ V13
 </td>
 <td style="text-align:right;">
 62.52%
-</td>
-<td style="text-align:right;">
-39.65%
 </td>
 <td style="text-align:right;">
 43.88%
@@ -567,9 +543,6 @@ V14
 57.65%
 </td>
 <td style="text-align:right;">
-50.54%
-</td>
-<td style="text-align:right;">
 49.30%
 </td>
 <td style="text-align:right;">
@@ -597,9 +570,6 @@ V15
 </td>
 <td style="text-align:right;">
 56.54%
-</td>
-<td style="text-align:right;">
-46.14%
 </td>
 <td style="text-align:right;">
 22.12%
@@ -631,9 +601,6 @@ V16
 52.88%
 </td>
 <td style="text-align:right;">
-53.62%
-</td>
-<td style="text-align:right;">
 56.19%
 </td>
 <td style="text-align:right;">
@@ -661,9 +628,6 @@ V17
 </td>
 <td style="text-align:right;">
 51.95%
-</td>
-<td style="text-align:right;">
-52.34%
 </td>
 <td style="text-align:right;">
 44.54%
@@ -695,9 +659,6 @@ V24
 45.11%
 </td>
 <td style="text-align:right;">
-55.60%
-</td>
-<td style="text-align:right;">
 63.52%
 </td>
 <td style="text-align:right;">
@@ -725,9 +686,6 @@ V25
 </td>
 <td style="text-align:right;">
 52.49%
-</td>
-<td style="text-align:right;">
-52.79%
 </td>
 <td style="text-align:right;">
 37.11%
@@ -759,9 +717,6 @@ V26
 35.05%
 </td>
 <td style="text-align:right;">
-57.48%
-</td>
-<td style="text-align:right;">
 12.33%
 </td>
 <td style="text-align:right;">
@@ -779,6 +734,9 @@ V26
 </div>
 <div id="sketch-7-summary" class="section level3">
 <h3>Sketch 7 Summary</h3>
+<ul>
+<li>2020 proposition outcomes (percent of voters who approve the proposition) with the share of the Latinx and Asian vote and the registered voter turnout (RVT) in the 2020 General Election.</li>
+</ul>
 <table class="table table-striped table-hover table-condensed" style="margin-left: auto; margin-right: auto;">
 <thead>
 <tr>
@@ -796,9 +754,6 @@ prc_p17
 </th>
 <th style="text-align:right;">
 prc_p21
-</th>
-<th style="text-align:right;">
-prc_p22
 </th>
 <th style="text-align:right;">
 prc_latvote
@@ -832,9 +787,6 @@ NEWVRA
 43.12%
 </td>
 <td style="text-align:right;">
-55.33%
-</td>
-<td style="text-align:right;">
 65.40%
 </td>
 <td style="text-align:right;">
@@ -862,9 +814,6 @@ V09
 </td>
 <td style="text-align:right;">
 39.66%
-</td>
-<td style="text-align:right;">
-53.03%
 </td>
 <td style="text-align:right;">
 29.03%
@@ -896,9 +845,6 @@ V10
 38.95%
 </td>
 <td style="text-align:right;">
-57.47%
-</td>
-<td style="text-align:right;">
 48.05%
 </td>
 <td style="text-align:right;">
@@ -926,9 +872,6 @@ V11
 </td>
 <td style="text-align:right;">
 38.06%
-</td>
-<td style="text-align:right;">
-56.28%
 </td>
 <td style="text-align:right;">
 49.12%
@@ -960,9 +903,6 @@ V12
 63.02%
 </td>
 <td style="text-align:right;">
-44.58%
-</td>
-<td style="text-align:right;">
 47.18%
 </td>
 <td style="text-align:right;">
@@ -990,9 +930,6 @@ V13
 </td>
 <td style="text-align:right;">
 62.52%
-</td>
-<td style="text-align:right;">
-39.65%
 </td>
 <td style="text-align:right;">
 43.88%
@@ -1024,9 +961,6 @@ V14
 57.65%
 </td>
 <td style="text-align:right;">
-50.54%
-</td>
-<td style="text-align:right;">
 49.30%
 </td>
 <td style="text-align:right;">
@@ -1054,9 +988,6 @@ V15
 </td>
 <td style="text-align:right;">
 56.54%
-</td>
-<td style="text-align:right;">
-46.14%
 </td>
 <td style="text-align:right;">
 22.12%
@@ -1088,9 +1019,6 @@ V16
 52.88%
 </td>
 <td style="text-align:right;">
-53.62%
-</td>
-<td style="text-align:right;">
 56.19%
 </td>
 <td style="text-align:right;">
@@ -1118,9 +1046,6 @@ V17
 </td>
 <td style="text-align:right;">
 51.92%
-</td>
-<td style="text-align:right;">
-52.36%
 </td>
 <td style="text-align:right;">
 44.64%
@@ -1152,9 +1077,6 @@ V20
 50.44%
 </td>
 <td style="text-align:right;">
-51.63%
-</td>
-<td style="text-align:right;">
 49.03%
 </td>
 <td style="text-align:right;">
@@ -1182,9 +1104,6 @@ V21
 </td>
 <td style="text-align:right;">
 52.36%
-</td>
-<td style="text-align:right;">
-52.20%
 </td>
 <td style="text-align:right;">
 46.00%
@@ -1216,9 +1135,6 @@ V24
 42.89%
 </td>
 <td style="text-align:right;">
-55.29%
-</td>
-<td style="text-align:right;">
 45.21%
 </td>
 <td style="text-align:right;">
@@ -1246,9 +1162,6 @@ V25
 </td>
 <td style="text-align:right;">
 52.49%
-</td>
-<td style="text-align:right;">
-52.79%
 </td>
 <td style="text-align:right;">
 37.11%
@@ -1280,9 +1193,6 @@ V26
 35.05%
 </td>
 <td style="text-align:right;">
-57.48%
-</td>
-<td style="text-align:right;">
 12.33%
 </td>
 <td style="text-align:right;">
@@ -1310,9 +1220,6 @@ V29
 </td>
 <td style="text-align:right;">
 47.91%
-</td>
-<td style="text-align:right;">
-49.76%
 </td>
 <td style="text-align:right;">
 18.61%
